...
    <string name="screen_about_button_how_secure_messaging_works">How Secure Messaging works</string>
    <string name="screen_about_button_why_we_made_secure_messaging">Why we made Secure Messaging</string>
    <string name="screen_about_button_faqs">FAQs</string>
    <string name="screen_about_button_privacy_policy">Privacy policy</string>
    <string name="screen_about_headline_getting_started">Getting started</string>
    <string name="screen_about_button_craft_your_first_message">Compose your first message</string>
    <string name="screen_about_button_keeping_passphrases_safe">Keeping passphrases safe</string>
    <string name="screen_about_headline_as_the_conversation_progresses">As the conversation progresses</string>
    <string name="screen_about_button_what_to_expect_as_a_reply">What to expect as a reply</string>
    <string name="screen_about_button_source_protection">Source protection</string>
    <string name="screen_about_headline_technical_information">Technical information</string>
    <string name="screen_about_technical_information">The details below help our engineers to develop and test this feature.</string>

...
    <string name="screen_how_this_works_pager3_title">Memorise your passphrase</string>
    <string name="screen_how_this_works_pager3_content">Shortly you will be given a unique passphrase. Use this to access your conversation. Please memorise it or record it somewhere secure.</string>

    <!--New session screen-->
    <string name="screen_new_session_help_banner_keeping_passphrases_safe">Keeping passphrases safe</string>
    <string name="screen_new_session_help_banner_learn_more">Learn more</string>
    <string name="screen_new_session_button_already_have_passphrase">I already have a passphrase</string>
    <string name="screen_new_session_button_confirm_passphrase">Confirm passphrase</string>
    <string name="screen_new_session_button_remembered_my_passphrase">I have remembered my passphrase</string>
    <string name="screen_new_session_button_reveal_passphrase">Reveal passphrase</string>
    <string name="screen_new_session_error_entered_passphrase_does_not_match">The passphrase you entered does not match the generated one from the previous screen.</string>
    <string name="screen_new_session_header_confirm_passphrase">Enter passphrase</string>
    <string name="screen_new_session_header_remember_passphrase">Remember passphrase</string>
    <string name="screen_new_session_text_confirm_passphrase_explanation">Enter your passphrase to unlock your secure vault and send your first message.</string>
    <string name="screen_new_session_text_remember_passphrase_explanation">You will always need this passphrase to access your conversation, ~Make sure you memorise it or write it somewhere safe~. Your passphrase must be entered in the correct order with the correct spelling.</string>
...
    <string name="icon_content_description_info">Information</string>
    <string name="icon_content_description_refresh">Refresh</string>
    <string name="icon_content_description_reveal">Reveal</string>
    <string name="icon_content_description_warning">Warning</string>

    <!-- Component: passphrases -->
    <string name="component_passphrases_button_hide_passphrase">Hide passphrase</string>
    <string name="component_passphrases_button_reveal_passphrase">Reveal passphrase</string>

    <!-- Shared: new conversation confirmation dialog -->
    <string name="dialog_confirm_new_conversation_heading">Set up your secure message vault</string>
    <string name="dialog_confirm_new_conversation_content">Starting a new conversation will remove any prior messages from your vault, if they existed. \n\nDo you want to continue?</string>
    <string name="dialog_confirm_new_conversation_button_yes">Yes, start a new conversation</string>
...
