...
        icon.AsComposable(size = 18.dp, tint = colorBorder, modifier = Modifier.padding(top = 2.dp))
        Text(
            text = text,
            style = MaterialTheme.typography.body1.copy(color = colorText),
            modifier = Modifier
                .padding(start = Padding.S)
                .testTag("warning_box_text")
        )
    }
}

@Preview
@Composable
...
