...
            } else {
                PASSPHRASE_MASK
            },
            modifier = textModifier
                .fillMaxWidth()
                .padding(Padding.M)
                .testTag("passphrase_box"),
            textAlign = TextAlign.Center,
            style = TextStyle(fontWeight = FontWeight.Bold, fontFamily = FontFamily.Monospace)
        )
    }
}

...
