...
            text = stringResource(R.string.screen_new_session_button_reveal_passphrase),
            icon = CoverDropIcons.Reveal,
            onClick = revealPassphrase,
            modifier = Modifier
                .padding(start = Padding.M, end = Padding.M)
                .fillMaxWidth(1f)
                .testTag("primary_button_reveal_passphrase"),
        )
    }

    Divider(
        color = NeutralMiddle,
        modifier = Modifier.padding(top = Padding.M)
...
